--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -17,12 +17,15 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/weekly-nerd">Weekly Nerd</a></li>
-        <li><a href="/hackaton">Hackaton</a></li>
-        <li><a href="/reflectie-leerdoelen">Reflectie en Leerdoelen</a></li>
+        <li><a href="/projecten">Projecten</a></li>
+        <li><a href="/reflectie-leerdoelen">Reflectie & Leerdoelen</a></li>
       </ul>
     </nav>
   </header>
   <main>
+    <div class="cursor">
+  <div class="crosshair"></div>   <!-- Layer 1: pointy cross -->
+</div>
     {% block content %}{% endblock %}
   </main>
 </body>
