--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -19,6 +19,7 @@
         <li><a href="/weekly-nerd">Weekly Nerd</a></li>
         <li><a href="/projecten">Projecten</a></li>
         <li><a href="/reflectie-leerdoelen">Reflectie & Leerdoelen</a></li>
+        <li><a href="/meesterproef">Meesterproef</a></li>
       </ul>
     </nav>
   </header>
