--- a/server/components/talkers/talkers.css
+++ b/server/components/talkers/talkers.css
@@ -9,12 +9,19 @@
         /* padding: 2em; */
     }
     & li {
-        padding: 1em 0em;
+        padding: 0em 2em;
+        margin: 0 2em;
         width: 60vw;
     }
-    /* figure {
-
-    } */
+    figure {
+        margin: 0;
+        padding: 0;
+        position: relative;
+        width: 50vw;
+        padding-bottom: 100%; /* Aspect ratio 1:1 */
+        border-radius: 0.5em;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
     & img {
             width: 100%;
             height: auto;
