--- a/server/views/index.css
+++ b/server/views/index.css
@@ -19,43 +19,48 @@ body.home-page .main-menu {
   flex: 1;
 }
 
-.main-menu {
-  background: #f0f0f0;
-
-  ul {
-    height: 100%;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    justify-items: center;
-    align-items: center;
-
-    li {
-      height: 100%;
-      width: 100%;
-      font-weight: bold;
-      text-align: center;
-      transition: all 0.3s;
-
-      &:hover {
-        background-color: #4a4a4a;
-        a {
-          color: #ffffff;
-        }
-      }
-
-      a {
-        text-decoration: none;
-        color: #000;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        font-size: 3rem;
-      }
+.middle-section {
+  display: flex;
+  background-image: url(https://static-dm.ubisoft.com/siege/prod/0488c0280e77f5f02cb0915c18fa2e7a.jpg);
+  & .projectsHomepage {
+    padding: 1.25rem;
+    & ul {
+      gap: 1.875rem;
     }
+    & figure {
+      display: flex;
+      gap: 1rem;
+      background-color: var(--primary-black-color);
+      color: var(--primary-white-color);
+    }
+    & img {
+      width: 20%;
+      height: auto;
+    }
+  }
+  
+  
+}
+
+.meesterproef {
+  background-image: url(/public/images/FramerFramed.jpeg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  
+  width: 100vw;
+  height: 80vh;
+  aspect-ratio: 4 / 3;
+  object-fit: cover;
+
+  padding: 2rem;
+  background-color: aqua; /* alleen zichtbaar als de image transparant is */
+  & article {
+    background-color: rgba(12,15,22,.66);
+    border: 1px solid rgba(176,186,198,.5);
+    backdrop-filter: blur(3px);
+    color: var(--primary-white-color);
+    max-width: 27.5rem;
+    padding: 1.875rem 1.875rem 4.375rem;
   }
 }
