--- a/server/components/meesterproefHomepage/meesterproefHomepage.liquid
+++ b/server/components/meesterproefHomepage/meesterproefHomepage.liquid
@@ -1,7 +1,10 @@
-{% comment %} <img src="/images/FramerFramed.jpeg" alt=""> {% endcomment %}
-
 <article>
-    <h2>{{ meesterproef.name }}</h2>
-    <p>{{ meesterproef.description }}</p>
+    <div>
+        <h2>{{ meesterproef.name }}</h2>
+        <p>{{ meesterproef.description }}</p>
+    </div>
+   
     <a href="/meesterproef">Lees meer</a>
 </article>
+
+
