--- a/server/views/blog-detail.liquid
+++ b/server/views/blog-detail.liquid
@@ -12,6 +12,7 @@
       {% if nerd.inleiding %}
         <div class="nerd-intro">
           <h1>{{ nerd.title }}</h1>
+          <small>{{ nerd.interesse }}</small>
           <p>{{ nerd.inleiding }}</p>
         </div>
       {% endif %}
