--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -22,7 +22,7 @@
   {% render '../components/projectsHomepage/projectsHomepage.liquid' randomVakken: randomVakken: %}
 </section>
 
-<section class="meesterproef">
+<section class="meesterproefHomepage">
   {% render '../components/meesterproefHomepage/meesterproefHomepage.liquid' meesterproef: meesterproef %}
 </section>
 
