--- a/server/components/talkers/talkers.liquid
+++ b/server/components/talkers/talkers.liquid
@@ -3,11 +3,9 @@
         {% for nerd in weeklyNerdData %}
             <li>
                 <figure>
-                    <img src="{{ nerd.image.src }}" alt="{{ nerd.image.alt }}">
+                    <img src="{% if nerd.image.src %}{{ nerd.image.src }}{% else %}/images/blank.png{% endif %}" alt="{{ nerd.image.alt | default: 'Afbeelding niet beschikbaar' }}">
                     <figcaption>
                         <h2>{{ nerd.intro }}</h2>
-                        <small>{{ nerd.title }}</small>
-                        <p>{{ nerd.inleiding }}</p>
                     </figcaption>
                 </figure>
                 <a href="/weekly-nerd/{{ nerd.id }}">Lees meer</a>    
