--- a/server/components/projectsHomepage/projectsHomepage.liquid
+++ b/server/components/projectsHomepage/projectsHomepage.liquid
@@ -8,13 +8,13 @@
                 <figcaption>
                     <h3>{{ vak.name }}</h3>
                     <p>{{ vak.description }}</p>
-                    <a href="/projects/{{ id }}">Lees meer</a>
+                    <a href="/projecten/{{ id }}">Lees meer</a>
                 </figcaption>
                
             </figure> 
         </li>
         {% endfor %}
     </ul>
-    <a href="/projects">Zie alle vakken</a>
+    <a href="/projecten">Zie alle vakken</a>
 
 </article>
