--- a/server/views/meesterproef.css
+++ b/server/views/meesterproef.css
@@ -1,6 +1,10 @@
 .productBio {
     min-height: 100vh;
     gap: 2rem;
+    & section:nth-of-type(1) {
+        display: flex;
+        gap: 1rem;
+    }
     & li {
         margin-bottom: 2em;
     }
@@ -16,6 +20,15 @@
             font-weight: bold;
             font-size: 1.5rem;
             margin-bottom: 1rem;
+        }
+    }
+    & figure {
+        display: flex;
+        gap: 1rem;
+        & iframe {
+            width: 350vw;
+            aspect-ratio: 16 / 9;
+            object-fit: contain;
         }
     }
 }
